Added test for update and delete group. Broke out schemas for group, category and category tree.
